Fix titles in aboutme section

--- a/aboutme.html
+++ b/aboutme.html
@@ -52,7 +52,14 @@
 
     <!-- EDUKACJA -->
     <section class="education">
-      <h2 class="aboutme-title">edukacja <i class="fas fa-graduation-cap"></i></h2>
+      <div class="aboutme-title">
+        <h2 class="aboutme-title__text">edukacja</h2>
+        <i class="fas fa-graduation-cap"></i>
+      </div>
+
+      <!-- <h2 class="aboutme-title">edukacja<i class="fas fa-graduation-cap"></i></h2> -->
+
+
       <div class="gray-box--green-border-right">
         <h3 class="date">październik 1995 r. – lipiec 2001 r.</h3>
         <h4 class="description--green">Politechnika Szczecińska<br>Wydział Informatyki</h4>
@@ -69,7 +76,10 @@
 
     <!-- PRACA -->
     <section class="work">
-      <h2 class="aboutme-title">praca <i class="far fa-handshake"></i></h2>
+      <div class="aboutme-title">
+        <h2 class="aboutme-title__text">praca</h2>
+        <i class="far fa-handshake"></i>
+      </div>
 
       <div class="gray-box--green-border-right">
         <h3 class="date">* kwiecień 2004 r. –</h3>
@@ -119,8 +129,13 @@
       </div>
     </section>
 
+    <!-- UMIEJĘTNOŚCI -->
     <section class="skills">
-      <h2 class="aboutme-title">umiejętności <i class="fas fa-cogs"></i></h2>
+      <div class="aboutme-title">
+        <h2 class="aboutme-title__text">umiejętności</h2>
+        <i class="fas fa-cogs"></i>
+      </div>
+
       <div class="gray-box">
         <div class="skills__skill-wrapper">
           <h4 class="description--green">adobe photoshop</h4>
@@ -205,6 +220,14 @@
             <div class="bar__ball"></div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- KURSY, CERTYFIKATY -->
+    <section class="courses">
+      <div class="aboutme-title">
+        <h2 class="aboutme-title__text">kursy, certyfikaty</h2>
+        <i class="fas fa-certificate"></i>
       </div>
     </section>
   </main>
