Add courses section

--- a/aboutme.html
+++ b/aboutme.html
@@ -229,6 +229,40 @@
         <h2 class="aboutme-title__text">kursy, certyfikaty</h2>
         <i class="fas fa-certificate"></i>
       </div>
+
+      <div class="gray-box--green-border-right">
+        <h3 class="date">22 listopada 2016 r.</h3>
+        <h4 class="description--green">Certyfikat internetowych rewolucji<br>(kurs marketingu internetowego)</h4>
+        <p class="description"><strong>Google</strong></p>
+      </div>
+
+      <div class="gray-box--green-border-left">
+        <h3 class="date">listopad 2001 r.</h3>
+        <h4 class="description--green">Certyfikat Operatora DTP</h4>
+        <p class="description"><strong>Ośrodek szkoleniowy<br>Publishing Institute</strong></p>
+      </div>
+
+      <div class="gray-box--green-border-right">
+        <h3 class="date">październik 2001 r.</h3>
+        <h4 class="description--green">Kurs podstawowy<br>na Operatora DTP</h4>
+        <h4 class="description--green">Kurs zaawansowany<br>na Operatora DTP</h4>
+        <p class="description"><strong>Ośrodek szkoleniowy<br>Publishing Institute</strong></p>
+      </div>
+
+      <div class="gray-box">
+        <h2 class="udemy-title">kursy na platformie udemy</h2>
+        <p class="description2">ES6 JavaScript Reloaded, Javascript ES6!</p>
+        <p class="description2">A Complete Reference Guide to Javascript</p>
+        <p class="description2">Code Your First Game: Arcade Classic in JavaScript On Canvas</p>
+        <p class="description2">Modern JavaScript From The Beginning</p>
+        <p class="description2">Materialize CSS From Scratch With 5 Projects</p>
+        <p class="description2">React for Absolute Beginners</p>
+        <p class="description2">React Front To Back</p>
+      </div>
+
+      <h4 class="description--green">Ponadto dziesiątki kursów na youtube od następujących użytkowników:</h4>
+      <p class="description2">Traversy Media, The Net Ninja, Fun Fun Function, DevTips, techsith, Samuraj Programowania
+        i wiele innych...</p>
     </section>
   </main>
 
