Add footer to aboutme section

--- a/aboutme.html
+++ b/aboutme.html
@@ -137,84 +137,84 @@
       </div>
 
       <div class="gray-box">
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">adobe photoshop</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">quarkxpress</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">adobe indesign</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">adobe illustrator</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">adobe xd</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">html</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">css</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">bootstrap</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">materialize</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">javascript</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">react</h4>
           <div class="bar">
             <div class="bar__ball"></div>
           </div>
         </div>
 
-        <div class="skills__skill-wrapper">
+        <div class="bar-wrapper">
           <h4 class="description--green">ms office</h4>
           <div class="bar">
             <div class="bar__ball"></div>
@@ -263,6 +263,35 @@
       <h4 class="description--green">Ponadto dziesiątki kursów na youtube od następujących użytkowników:</h4>
       <p class="description2">Traversy Media, The Net Ninja, Fun Fun Function, DevTips, techsith, Samuraj Programowania
         i wiele innych...</p>
+    </section>
+
+    <!-- JĘZYKI -->
+    <section class="languages">
+      <div class="aboutme-title">
+        <h2 class="aboutme-title__text">języki</h2>
+        <i class="fas fa-comment"></i>
+      </div>
+
+      <div class="gray-box">
+        <div class="bar-wrapper">
+          <h4 class="description--green">polski</h4>
+          <div class="bar">
+            <div class="bar__ball"></div>
+          </div>
+        </div>
+
+        <div class="bar-wrapper">
+          <h4 class="description--green">angielski</h4>
+          <div class="bar">
+            <div class="bar__ball"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <section class="footer">
+      <span class="footer__text">&copy; Krzysztof Pawłowski 2018</span>
     </section>
   </main>
 
