--- a/aboutme.html
+++ b/aboutme.html
@@ -295,6 +295,6 @@
   </main>
 
   <script src="js/menu_aboutme.js"></script>
-  <script src="js/skillsBalls.js"></script>
+  <script src="js/animBalls.js"></script>
   <!-- <script src="js/boxes.js"></script> -->
 </body>
