Add portfolio page and some animation to green boxes

--- a/aboutme.html
+++ b/aboutme.html
@@ -29,17 +29,17 @@
     <ul class="menu__list">
       <li class="list__item"><a href="index.html" rel="noopener">strona główna</a></li>
       <li class="list__item"><a class="highlighted" href="aboutme.html" rel="noopener">o mnie</a></li>
-      <li class="list__item"><a href="#!" rel="noopener">portfolio</a></li>
-      <li class="list__item"><a href="#!" rel="noopener">kontakt</a></li>
+      <li class="list__item"><a href="portfolio.html" rel="noopener">portfolio</a></li>
+      <li class="list__item"><a href="contact.html" rel="noopener">kontakt</a></li>
     </ul>
   </nav>
 
   <!-- HEADER -->
-  <header class="header-aboutme-portfolio">
-    <h1 class="header-aboutme-portfolio__title">o mnie</h1>
-    <h2 class="header-aboutme-portfolio__subtitle">Parę słów o sobie...</h2>
-    <img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="header-aboutme-portfolio__my-photo">
-    <p class="header-aboutme-portfolio__description">Z wykształcenia jestem informatykiem, z zawodu operatorem
+  <header class="header-aboutme">
+    <h1 class="header-aboutme__title">o mnie</h1>
+    <h2 class="header-aboutme__subtitle">Parę słów o sobie...</h2>
+    <img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="header-aboutme__my-photo">
+    <p class="header-aboutme__description">Z wykształcenia jestem informatykiem, z zawodu operatorem
       DTP/grafikiem.
       Przez ostatnie kilkanaście lat pracowałem w kilku wydawnictwach. Obecnie próbuj sił w tworzeniu stron
       internetowych i programowaniu w JavaScript.</p>
@@ -296,5 +296,4 @@
 
   <script src="js/menu_aboutme.js"></script>
   <script src="js/animBalls.js"></script>
-  <!-- <script src="js/boxes.js"></script> -->
 </body>
