--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <h1 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h1>
       </div>
       <ul class="menu__list">
-        <li class="list__item"><a class="highlighted" href="#!" rel="noopener">strona główna</a></li>
+        <li class="list__item"><a class="highlighted" href="index.html" rel="noopener">strona główna</a></li>
         <li class="list__item"><a href="aboutme.html" rel="noopener">o mnie</a></li>
-        <li class="list__item"><a href="#!" rel="noopener">portfolio</a></li>
-        <li class="list__item"><a href="#!" rel="noopener">kontakt</a></li>
+        <li class="list__item"><a href="portfolio.html" rel="noopener">portfolio</a></li>
+        <li class="list__item"><a href="contact.html" rel="noopener">kontakt</a></li>
       </ul>
     </nav>
 
@@ -57,180 +57,6 @@
         </a>
       </div>
     </header>
-
-    <!-- SEKCJA PORTFOLIO -->
-    <!-- <section class="portfolio" id="portfolio">
-      <h2 class="sections-title">Portfolio</h2>
-      <p class="description">Wszystkie projekty możesz zobaczyć na moim profilu na GitHubie</p>
-      <div class="portfolio-grid">
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/LOAN-CALCULATOR/" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/kalkulator_pozyczkowy.jpg" alt="obraz aplikacji kalkulatora">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Kalkulator Pożyczkowy</h3>
-            <p class="portfolio-example-description">Aplikacja oblicza miesięczną ratę kredytu do spłacenia. Całkowitą
-              kwotę pożyczki i&nbsp;zysk pożyczkodawcy.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/LISTA-KSIAZEK" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/lista_ksiazek.jpg" alt="obraz aplikacji listy książek">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Lista Książek</h3>
-            <p class="portfolio-example-description">Baza danych książek, gdzie dodajemy tytuł, autora i&nbsp;cenę
-              książki.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/TO-DOver3" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/lista_zadan.jpg" alt="obraz aplikacji listy zadań">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Lista Zadań</h3>
-            <p class="portfolio-example-description">Lista zadań do wykonania z&nbsp;możliwością kasowania, filtrowania
-              i&nbsp;modyfikowania konkretnego zadania.
-            </p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/LISTA-ZAKUPOW" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/lista_zakupow.jpg" alt="obraz aplikacji listy zakupów">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Lista Zakupów</h3>
-            <p class="portfolio-example-description">Lista zakupów z&nbsp;możliwością kasowania i&nbsp;modyfikowania
-              konkretnego produktu.
-            </p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Biuro_Podrozy" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/materialize/biuro_podrozy.jpg" alt="obraz strony biura podróży">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Biuro Podróży</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią,
-              wyszukiwarką i&nbsp;kontaktem.
-            </p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Biznes" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/materialize/biznes.jpg" alt="obraz strony biznesowej">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Strona Biznesowa</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;lokalizacją za
-              pomocą Google Maps.
-            </p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Firma_IT" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/materialize/firma_IT.jpg" alt="obraz strony firmy z branży IT">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Strona IT</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością
-              założenia konta.
-            </p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Panel_Logowania" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/materialize/panel_logowania.jpg" alt="obraz strony z panelem logowania ">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Panel Administratora</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością
-              dodawania i&nbsp;kasowania zadań, dodawania postów,
-              kategorii&nbsp;i użytkowników.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Projektowanie/" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/materialize/projektowanie.jpg" alt="obraz strony o projektowaniu">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Projektowanie</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią
-              projektów podzieloną na kategorie.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/POGODA/" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/pogoda.jpg" alt="obraz aplikacji o pogodzie">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Pogoda</h3>
-            <p class="portfolio-example-description">Aplikacja, która pokazuje różne czynniki pogodowe w&nbsp;danej
-              lokalizacji z&nbsp;danych ze strony https://api.wunderground.com.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/REDDIT" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/reddit.jpg" alt="obraz aplikacji wyszukiwarki reddit">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">REDDIT</h3>
-            <p class="portfolio-example-description">Wyszukiwarka postów REDDIT z&nbsp;sortowaniem i&nbsp;wyborem
-              liczby wyników.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/GITHUB-USERS-FINDER" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/github_wyszukiwarka.jpg" alt="obraz aplikacji wyszukiwarki użytkowników GitHuba">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Wyszukiwarka GitHub</h3>
-            <p class="portfolio-example-description">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i&nbsp;najnowsze
-              repozytoria.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/WEEKLY-WEBDEV-CHALLENGE-1" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/WeeklyWebDevChallenge_01.jpg" alt="obraz strony z zadania numer 1 WeeklyWebDevChallenge">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">WebDevChallenge1</h3>
-            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie
-              z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/WEB_DEV_CHALLENGE_NR37" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/WeeklyWebDevChallenge_37.jpg" alt="obraz strony z zadania numer 37 WeeklyWebDevChallenge">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">WebDevChallenge37</h3>
-            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie
-              z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/NUMBER-GUESSER" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/zgadnij_liczbe.jpg" alt="obraz aplikacji zgadnij liczbę">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Zgadnij liczbę</h3>
-            <p class="portfolio-example-description">Aplikacja sprawdza czy zgadłeś liczbę z&nbsp;przedziału od
-              1&nbsp;do 10. Masz na to trzy próby.</p>
-          </div>
-        </figure>
-        <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/kafelki/" target="_blank" rel="noopener">
-            <img class="portfolio-example-img" src="img/Portfolio/Gra w kafelki.jpg" alt="obraz aplikacji gra w kafelki">
-          </a>
-          <div class="portfolio-example-description-wrapper">
-            <h3 class="portfolio-example-title">Gra w kafelki</h3>
-            <p class="portfolio-example-description">W grze musisz odkrywać pary kafelków o&nbsp;tym samym kolorze. Na
-              końcu pokazuje Ci czas w&nbsp;jakim to zrobiłeś.</p>
-          </div>
-        </figure>
-      </div>
-    </section> -->
 
     <!-- SEKCJA KONTAKT -->
     <!-- <section class="contact" id="contact">
