Add functionality of menu in portfolio

--- a/aboutme.html
+++ b/aboutme.html
@@ -289,11 +289,11 @@
     </section>
 
     <!-- FOOTER -->
-    <section class="footer">
+    <footer class="footer">
       <span class="footer__text">&copy; Krzysztof Pawłowski 2018</span>
-    </section>
+    </footer>
   </main>
 
-  <script src="js/menu_aboutme.js"></script>
+  <script src="js/menu_aboutme-portfolio.js"></script>
   <script src="js/animBalls.js"></script>
 </body>
