--- a/portfolio.html
+++ b/portfolio.html
@@ -188,5 +188,5 @@
     </footer>
   </main>
 
-  <script src="js/menu_portfolio.js"></script>
+  <script src="js/menu_aboutme-portfolio.js"></script>
 </body>
