--- a/contact.html
+++ b/contact.html
@@ -15,44 +15,48 @@
   <title>O mnie</title>
 </head>
 
-<body style="background-image: none;">
+<!-- <body style="background-image: none;"> -->
 
-  <!-- MENU -->
-  <div class="hamburger-menu">
-    <div class="hamburger-menu__bar"></div>
-  </div>
-  <nav class="menu">
-    <div class="menu__header">
-      <h1 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h1>
+<body>
+  <main class="container">
+
+    <!-- MENU -->
+    <div class="hamburger-menu">
+      <div class="hamburger-menu__bar"></div>
     </div>
-    <ul class="menu__list">
-      <li class="list__item"><a href="index.html" rel="noopener">strona główna</a></li>
-      <li class="list__item"><a href="aboutme.html" rel="noopener">o mnie</a></li>
-      <li class="list__item"><a href="portfolio.html" rel="noopener">portfolio</a></li>
-      <li class="list__item"><a class="highlighted" href="contact.html" rel="noopener">kontakt</a></li>
-    </ul>
-  </nav>
+    <nav class="menu">
+      <div class="menu__header">
+        <h1 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h1>
+      </div>
+      <ul class="menu__list">
+        <li class="list__item"><a href="index.html" rel="noopener">strona główna</a></li>
+        <li class="list__item"><a href="aboutme.html" rel="noopener">o mnie</a></li>
+        <li class="list__item"><a href="portfolio.html" rel="noopener">portfolio</a></li>
+        <li class="list__item"><a class="highlighted" href="contact.html" rel="noopener">kontakt</a></li>
+      </ul>
+    </nav>
 
-  <!-- HEADER -->
-  <header class="header-contact">
-    <h1 class="header-contact__title">kontakt</h1>
-    <i class="fas fa-envelope"></i>
-    <span class="header-contact__email">kpawlowski1976@gmail.com</span>
-    <span class="header-contact__email">krzyszp@wp.pl</span>
-    <div class="header-icons">
-      <a class="header-icons__facebook" href="https://www.facebook.com/KP1976PL" target="_blank" aria-label="Facebook"
-        rel="noopener">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a class="header-icons__github" href="https://github.com/KP1976" target="_blank" aria-label="GitHub" rel="noopener">
-        <i class="fab fa-github"></i>
-      </a>
-      <a class="header-icons__linkedin" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank"
-        aria-label="LinkedIn" rel="noopener">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-    </div>
-  </header>
+    <!-- HEADER -->
+    <header class="header-contact">
+      <h1 class="header-contact__title">kontakt</h1>
+      <i class="fas fa-envelope"></i>
+      <span class="header-contact__email">kpawlowski1976@gmail.com</span>
+      <span class="header-contact__email">krzyszp@wp.pl</span>
+      <div class="header-icons">
+        <a class="header-icons__facebook" href="https://www.facebook.com/KP1976PL" target="_blank" aria-label="Facebook"
+          rel="noopener">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a class="header-icons__github" href="https://github.com/KP1976" target="_blank" aria-label="GitHub" rel="noopener">
+          <i class="fab fa-github"></i>
+        </a>
+        <a class="header-icons__linkedin" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank"
+          aria-label="LinkedIn" rel="noopener">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </div>
+    </header>
+  </main>
 
-  <!-- <script src="js/menu_aboutme-portfolio.js"></script> -->
+  <script src="js/menu_start-contact.js"></script>
 </body>
