Add responsive styles for 576px (header, aboutme)

--- a/aboutme.html
+++ b/aboutme.html
@@ -39,10 +39,10 @@
     <h1 class="header-aboutme__title">o mnie</h1>
     <h2 class="header-aboutme__subtitle">Parę słów o sobie...</h2>
     <img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="header-aboutme__my-photo">
-    <p class="header-aboutme__description">Z wykształcenia jestem informatykiem, z zawodu operatorem
+    <p class="header-aboutme__description">Z wykształcenia jestem informatykiem, z&nbsp;zawodu operatorem
       DTP/grafikiem.
-      Przez ostatnie kilkanaście lat pracowałem w kilku wydawnictwach. Obecnie próbuj sił w tworzeniu stron
-      internetowych i programowaniu w JavaScript.</p>
+      Przez ostatnie kilkanaście lat pracowałem w&nbsp;kilku wydawnictwach. Obecnie w&nbsp;ramach nauki i&nbsp;praktyki
+      zajmuję się tworzeniem stron internetowych i&nbsp;programowaniem w&nbsp;JavaScript.</p>
     <div class="arrows">
       <div class="arrows__arrow"></div>
       <div class="arrows__arrow"></div>
