--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- HEADER -->
     <header class="header">
       <img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="header__my-photo">
-      <h1 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h1>
+      <h1 class="header__my-name"><span class="header__my-name--green">Krzysztof</span> Pawłowski</h1>
       <div class="professions">
         <h2 class="professions__profession">operator DTP</h2>
         <h2 class="professions__profession">grafik komputerowy</h2>
@@ -53,7 +53,7 @@
         </a>
         <a class="header-icons__linkedin" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank"
           aria-label="LinkedIn" rel="noopener">
-          <i class="fab fa-linkedin-in"></i>
+          <i class="fab fa-linkedin"></i>
         </a>
       </div>
     </header>
