Add responsive styles for 768px (header, aboutme)

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         </a>
         <a class="header-icons__linkedin" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank"
           aria-label="LinkedIn" rel="noopener">
-          <i class="fab fa-linkedin-in"></i>
+          <i class="fab fa-linkedin"></i>
         </a>
       </div>
     </header>
