Add responsive styles for 768px (work, aboutme)

--- a/aboutme.html
+++ b/aboutme.html
@@ -85,7 +85,8 @@
         <h4 class="description--green">Operator DTP</h4>
         <p class="description"><strong>Invest Company Corporation</strong></p>
         <p class="description2">skład i łamanie czasopisma „Piłka Nożna”<br><br>wysyłka materiałów do drukarni<br><br>tworzenie
-          infografik<br><br>obróbka zdjęć<br><br>tworzenie okładki<br><br>* od października praca na 1/4 etatu (tylko
+          infografik<br><br>obróbka zdjęć<br><br>tworzenie okładki (w zastępstwie)<br><br>* od października praca na
+          1/4 etatu (tylko
           w kolejne niedziele)</p>
       </div>
 
@@ -119,7 +120,7 @@
           i&nbsp;obsługi systemu Windows<br><br>instalacja i wymiana kabli sieciowych</p>
       </div>
 
-      <div class="gray-box--green-border-right">
+      <div class="gray-box--green-border-left">
         <h3 class="date">lipiec 1998 r.</h3>
         <h4 class="description--green">Pomocnik informatyka</h4>
         <p class="description"><strong>Urząd miejski<br>w Świnoujściu</strong></p>
