Add responsive styles for 768px (skills, courses, languages, footer aboutme)

--- a/aboutme.html
+++ b/aboutme.html
@@ -260,9 +260,12 @@
         <p class="description2">React Front To Back</p>
       </div>
 
-      <h4 class="description--green">Ponadto dziesiątki kursów na youtube od następujących użytkowników:</h4>
-      <p class="description2">Traversy Media, The Net Ninja, Fun Fun Function, DevTips, techsith, Samuraj Programowania
-        i wiele innych...</p>
+      <div class="youtube">
+        <h4 class="description--green">Ponadto dziesiątki kursów na youtube od następujących użytkowników:</h4>
+        <p class="description2">Traversy Media, The Net Ninja, Fun Fun Function, DevTips, techsith, Samuraj
+          Programowania
+          i wiele innych...</p>
+      </div>
     </section>
 
     <!-- JĘZYKI -->
