Add responsive styles fo 992px (education, work, aboutme)

--- a/aboutme.html
+++ b/aboutme.html
@@ -79,7 +79,7 @@
         <h3 class="date">* kwiecień 2004 r. –</h3>
         <h4 class="description--green">Operator DTP</h4>
         <p class="description"><strong>Invest Company Corporation</strong></p>
-        <p class="description2">skład i łamanie czasopisma „Piłka Nożna”<br><br>wysyłka materiałów do drukarni<br><br>tworzenie
+        <p class="description2">skład i&nbsp;łamanie czasopisma „Piłka Nożna”<br><br>wysyłka materiałów do drukarni<br><br>tworzenie
           infografik<br><br>obróbka zdjęć<br><br>tworzenie okładki (w zastępstwie)<br><br>* od października praca na
           1/4 etatu (tylko
           w kolejne niedziele)</p>
@@ -89,14 +89,14 @@
         <h3 class="date">czerwiec 2002 r. – grudzień 2003 r.</h3>
         <h4 class="description--green">Grafik komputerowy</h4>
         <p class="description"><strong>Wydawnictwo<br>Hearst-Marquard<br>Publishing</strong></p>
-        <p class="description2">skład i łamanie czasopisma „Shape”</p>
+        <p class="description2">skład i&nbsp;łamanie czasopisma „Shape”</p>
       </div>
 
       <div class="gray-box--green-border-right">
         <h3 class="date">luty – kwiecień 2002 r.</h3>
         <h4 class="description--green">Operator DTP</h4>
         <p class="description"><strong>Wydawnictwo Vision Media</strong></p>
-        <p class="description2">skład i łamanie czasopisma „Technologie i przemysł<br><br>wysyłka materiałów do
+        <p class="description2">skład i&nbsp;łamanie czasopisma „Technologie i&nbsp;przemysł”<br><br>wysyłka materiałów
           drukarni</p>
       </div>
 
@@ -104,7 +104,7 @@
         <h3 class="date">styczeń 2002 r.</h3>
         <h4 class="description--green">Grafik komputerowy</h4>
         <p class="description"><strong>Wydawnictwo PAIP</strong></p>
-        <p class="description2">skład i łamanie czasopisma<br><br>wysyłka materiałów do drukarni</p>
+        <p class="description2">skład i&nbsp;łamanie czasopisma<br><br>wysyłka materiałów do drukarni</p>
       </div>
 
       <div class="gray-box--green-border-right">
@@ -112,7 +112,7 @@
         <h4 class="description--green">Informatyk Helpdesk</h4>
         <p class="description"><strong>Urząd miejski<br>w Świnoujściu</strong></p>
         <p class="description2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
-          i&nbsp;obsługi systemu Windows<br><br>instalacja i wymiana kabli sieciowych</p>
+          i&nbsp;obsługi systemu Windows<br><br>instalacja i&nbsp;wymiana kabli sieciowych</p>
       </div>
 
       <div class="gray-box--green-border-left">
