Fix portfolio and aboutme container for 768px

--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,7 @@
       zajmuję się tworzeniem stron internetowych i&nbsp;programowaniem w&nbsp;JavaScript.</p>
   </header>
 
-  <main class="container-aboutme-portfolio">
+  <main class="aboutme-container">
 
     <!-- EDUKACJA -->
     <section class="education">
