--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     <h2 class="header-portfolio__subtitle">Oto przykładowe prace, które stworzyłem...</h2>
   </header>
 
-  <main class="container-aboutme-portfolio">
+  <main class="portfolio-container">
     <figure class="green-box">
       <a class="green-box__link" href="https://kp1976.github.io/LOAN-CALCULATOR/" target="_blank" rel="noopener">
         <img class="green-box__example-img" src="img/Portfolio/kalkulator_pozyczkowy.jpg" alt="obraz aplikacji kalkulatora">
@@ -181,7 +181,6 @@
           w&nbsp;jakim to zrobiłeś.</p>
       </a>
     </figure>
-
     <!-- FOOTER -->
     <footer class="footer">
       <span class="footer__text">&copy; Krzysztof Pawłowski 2018</span>
